<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.gp.auth.ui.login.LoginViewModel"/>
        <variable
            name="fragment"
            type="com.gp.auth.ui.login.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/h_guideline1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/welcome_back_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            app:layout_constraintTop_toTopOf="@id/h_guideline1"
            android:textSize="40sp"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/welcome_back_textview"
            android:id="@+id/email_text_field"
            android:hint="@string/email"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_mail_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text="@={viewmodel.loginStateFlow.email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_text_field"
            android:id="@+id/password_text_field"
            android:hint="@string/password"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:text="@={viewmodel.loginStateFlow.password}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintTop_toBottomOf="@id/password_text_field"
            app:layout_constraintStart_toStartOf="@id/password_text_field"
            android:onClick="@{() -> fragment.onForgotPasswordClick()}"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signin_button"
            app:layout_constraintTop_toBottomOf="@id/forgot_password_button"
            app:layout_constraintStart_toStartOf="@id/password_text_field"
            app:layout_constraintEnd_toEndOf="@id/password_text_field"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:onClick="@{() -> fragment.onSignInClick()}"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/signin_button"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Don't have an account yet?"
                android:textSize="16sp"
                android:gravity="center_vertical"/>
            <Button
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sign_up"
            android:textSize="16sp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:onClick="@{() -> fragment.onSignUpClick()}"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>