<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.gp.auth.ui.registration.RegistrationViewModel"/>
        <variable
            name="fragment"
            type="com.gp.auth.ui.registration.RegistrationFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.registration.RegistrationFragment">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/h_guideline1"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/welcome_back_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            app:layout_constraintTop_toTopOf="@id/h_guideline1"
            android:textSize="40sp"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/welcome_back_textview"
            android:id="@+id/email_text_field"
            android:hint="@string/email"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_mail_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text="@={viewmodel.registrationUiState.email}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_text_field"
            android:id="@+id/password_text_field"
            android:hint="@string/password"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:text="@={viewmodel.registrationUiState.password}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_text_field"
            android:id="@+id/confirm_password_text_field"
            android:hint="@string/confirm_password"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:text="@={viewmodel.registrationUiState.rePassword}"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signup_button"
            app:layout_constraintTop_toBottomOf="@id/confirm_password_text_field"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/password_text_field"
            app:layout_constraintEnd_toEndOf="@id/password_text_field"
            android:text="@string/create_account"
            android:textSize="16sp"
            android:onClick="@{() -> fragment.onSignUpClick()}"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/signup_button"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"
                android:gravity="center_vertical" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_in"
                android:textSize="16sp"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:onClick="@{()-> fragment.onSignInClick()}"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
