<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:auth="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.gp.auth.ui.passwordreset.PasswordResetViewModel" />
        <variable
            name="fragment"
            type="com.gp.auth.ui.passwordreset.PasswordResetFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.passwordreset.PasswordResetFragment">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/h_guideline1"
            android:orientation="horizontal"
            auth:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/reset_password_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_your_password"
            auth:layout_constraintTop_toTopOf="@id/h_guideline1"
            android:textSize="40sp"
            android:gravity="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            auth:layout_constraintTop_toBottomOf="@id/reset_password_textview"
            android:id="@+id/email_text_field"
            android:hint="@string/email"
            android:layout_margin="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            auth:endIconMode="clear_text"
            auth:startIconDrawable="@drawable/baseline_mail_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:text="@={viewmodel.uiState.email}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/send_reset_email_button"
            auth:layout_constraintTop_toBottomOf="@id/email_text_field"
            auth:layout_constraintStart_toStartOf="@id/email_text_field"
            auth:layout_constraintEnd_toEndOf="@id/email_text_field"
            android:text="@string/send_reset_email"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> fragment.onSendResetEmailClick()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>